[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dem_blender"
authors = [
  { name = "Stephen Mather", email = "stephen.mather@opendronemap.org" },
]
packages = [
    { include = "dem_blender" }
]

dependencies = [
    "click",
    "gdal<=3.8.4",
    "joblib",
    "numpy",
    "python-dateutil",
    "rasterio>=1.3.11",
    "scipy",
]

requires-python =">=3.9"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dynamic = ['version', 'description']

[project.optional-dependencies]
extra = [
    "matplotlib",
    "notebook"
]
test = [
    "pytest",
    "pytest-cov",
]

full = ["dem_blender[extra,test]"]

[project.scripts]
dem_blender = "dem_blender.cli.main:merge"

[project.urls]
Source = "https://github.com/localdevices/dem_blender"

[tool.flit.sdist]
include = ["dem_blender"]

[tool.flit.module]
name = "dem_blender"

[tool.pytest.ini_options]
addopts = "--ff "
testpaths = ["tests"]
filterwarnings = [
]

# [tool.ruff]
# line-length = 120
# target-version = "py39"
# exclude = ["docs"]
#
# [tool.ruff.lint]
# # enable pydocstyle (E), pyflake (F) and isort (I), pytest-style (PT), bugbear (B)
# select = ["E", "F", "I", "PT", "D", "B", "ICN", "TID"]
# ignore = ["D211", "D213", "D206", "E741", "D105", "D203", "E712", "B904"]  # "E501" line length
#
# [tool.ruff.lint.per-file-ignores]
# "tests/**" = ["D100", "D101", "D102", "D103", "D104"]
# "pivnumba/__init__.py" = ["E402", "F401", "F403"]
# "tests/conftest.py" = ["E402"]
